[tool.poetry]
name = "ref-bot"
version = "0.1.0"
description = ""
authors = ["Arslan Yersain <arslanersain@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.3.0"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
typing-extensions = "^4.9.0"
sqlalchemy-utils = "^0.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
